exports[`PickListComponent should display component (nodes) correctly 1`] = `
<div>
  <main>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}>
      <PageHeader
        bsClass="page-header">
        <div>
          <span>
            Picklist (nodes)
          </span>
          <div
            style={
              Object {
                "float": "right",
                "margin": "0 25px 0 0"
              }
            }>
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="default"
              disabled={false}
              onClick={[Function bound toggleScanner]}>
              <img
                alt="scan"
                height={25}
                src="test-file-stub" />
            </Button>
          </div>
        </div>
      </PageHeader>
      <PickListComponent
        iconRendrer={[Function iconRendrer]}
        isnode={true}
        labelRendrer={[Function labelRendrer]}
        marked={
          Array [
            Object {
              "id": 1,
              "name": "Hei"
            },
            Object {
              "id": 3,
              "name": "Hei"
            }
          ]
        }
        move={[Function bound ]}
        picks={
          Array [
            Object {
              "marked": true,
              "path": Array [
                1
              ],
              "value": Object {
                "id": 1,
                "name": "Hei"
              }
            },
            Object {
              "marked": false,
              "path": Array [
                1,
                2
              ],
              "value": Object {
                "id": 2,
                "name": "Hei"
              }
            },
            Object {
              "marked": true,
              "path": Array [
                1,
                3
              ],
              "value": Object {
                "id": 3,
                "name": "Hei"
              }
            }
          ]
        }
        print={[Function bound print]}
        remove={[Function remove]}
        toggle={[Function toggle]} />
      <div
        style={
          Object {
            "textAlign": "left"
          }
        }>
        2
        /
        3
          
        Node(s) selected.
      </div>
    </Grid>
  </main>
</div>
`;

exports[`PickListComponent should display component (objects) correctly 1`] = `
<div>
  <main>
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={false}>
      <PageHeader
        bsClass="page-header">
        <div>
          <span>
            Picklist (objects)
          </span>
          <div
            style={
              Object {
                "float": "right",
                "margin": "0 25px 0 0"
              }
            }>
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsStyle="default"
              disabled={false}
              onClick={[Function bound toggleScanner]}>
              <img
                alt="scan"
                height={25}
                src="test-file-stub" />
            </Button>
          </div>
        </div>
      </PageHeader>
      <PickListComponent
        iconRendrer={[Function iconRendrer]}
        isnode={false}
        labelRendrer={[Function labelRendrer]}
        marked={
          Array [
            Object {
              "id": 2,
              "mainObjectId": 1,
              "name": "Test2"
            }
          ]
        }
        move={[Function bound ]}
        picks={
          Array [
            Object {
              "marked": false,
              "path": Array [
                1
              ],
              "value": Object {
                "id": 1,
                "name": "Test21"
              }
            },
            Object {
              "isMainObject": [Function isMainObject],
              "marked": true,
              "path": Array [
                1,
                2
              ],
              "value": Object {
                "id": 2,
                "mainObjectId": 1,
                "name": "Test2"
              }
            },
            Object {
              "marked": false,
              "path": Array [
                1,
                3
              ],
              "value": Object {
                "id": 3,
                "name": "Test23"
              }
            }
          ]
        }
        print={[Function bound print]}
        remove={[Function remove]}
        toggle={[Function toggle]} />
      <div
        style={
          Object {
            "textAlign": "left"
          }
        }>
        1
        /
        3
          
        Object(s) selected.
      </div>
    </Grid>
  </main>
</div>
`;

exports[`PickListTable should display node-picklist correctly 1`] = `
<div>
  <Table
    bordered={false}
    bsClass="table"
    condensed={true}
    hover={true}
    responsive={true}
    striped={true}>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "left",
              "width": "2em"
            }
          }>
          <input
            checked={false}
            className="normalAction"
            onChange={[Function onChange]}
            title="Select all"
            type="checkbox" />
        </th>
        <th
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "bottom"
            }
          }>
          <FontAwesome
            className="normalActionNoPadding"
            name="print"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Print labels for selected nodes" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected node(s) count">
            (1)
          </span>
          <FontAwesome
            className="normalAction"
            name="truck"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Move selected nodes" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected node(s) count">
            (1)
          </span>
          <FontAwesome
            className="normalAction"
            name="remove"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Remove selected nodes from list" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected node(s) count">
            (1)
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked=""
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked="checked"
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;

exports[`PickListTable should display object-picklist correctly 1`] = `
<div>
  <Table
    bordered={false}
    bsClass="table"
    condensed={true}
    hover={true}
    responsive={true}
    striped={true}>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "left",
              "width": "2em"
            }
          }>
          <input
            checked={false}
            className="normalAction"
            onChange={[Function onChange]}
            title="Select all"
            type="checkbox" />
        </th>
        <th
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "bottom"
            }
          }>
          <FontAwesome
            className="normalActionNoPadding"
            name="truck"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Move selected objects" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected object(s) count">
            (1)
          </span>
          <FontAwesome
            className="normalAction"
            name="remove"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Remove selected objects from list" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Selected object(s) count">
            (1)
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked=""
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked="checked"
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;
